--- a/Alien.html
+++ b/Alien.html
@@ -16,9 +16,10 @@
     </header>
     <section class="movie-details">
       <h1>Alien</h1>
-
+      <div id="player"></div>
       <p><b>Year:</b> year</p>
       <p><b> Description:</b> description</p>
     </section>
   </body>
+  <script src="js/javascript.js"></script>
 </html>
