--- a/Alien.html
+++ b/Alien.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <title>Alien</title>
+    <title id="title">Alien</title>
   </head>
   <body>
     <header>
