--- a/Avatar.html
+++ b/Avatar.html
@@ -3,7 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Avatar</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <title id="title">Avatar</title>
   </head>
-  <body></body>
+  <body>
+    <section class="movie-details">
+      <h1>Avatar</h1>
+      <div id="player"></div>
+      <p><b>Year:</b> year</p>
+      <p><b> Description:</b> description</p>
+    </section>
+  </body>
+  <script src="js/javascript.js"></script>
 </html>
