--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" media="screen" href="css/style.css" />
-     <link rel="stylesheet" media="print" href="css/print.css" />
+    <link rel="stylesheet" media="print" href="css/print.css" />
     <title>Movies</title>
   </head>
   <body>
@@ -15,18 +15,24 @@
     <section class="movies">
       <ul class="movie-list">
         <li class="movie-element">
-         <a href="Alien.html"> <h2 class="movie-title">Alien</h2> </a>
-         <a href="Alien.html"> <img class="movie-image" src="img/alien.jpg" alt="" /> </a>
+          <a href="Alien.html"> <h2 class="movie-title">Alien</h2> </a>
+          <a href="Alien.html">
+            <img class="movie-image" src="img/alien.jpg" alt="" />
+          </a>
         </li>
 
         <li class="movie-element">
           <a href="Arrival.html"> <h2 class="movie-title">Arrival</h2> </a>
-          <a href="Arrival.html"> <img class="movie-image" src="img/arrival.jpg" alt="" /> </a>
+          <a href="Arrival.html">
+            <img class="movie-image" src="img/arrival.jpg" alt="" />
+          </a>
         </li>
 
         <li class="movie-element">
-          <a href="Avatar.html"> <h2 class="movie-title">Avatar</h2> </a> 
-          <a href="Avatar.html"></a> <img class="movie-image" src="img/avatar.jpg" alt="" /> </a>
+          <a href="Avatar.html"> <h2 class="movie-title">Avatar</h2> </a>
+          <a href="Avatar.html">
+            <img class="movie-image" src="img/avatar.jpg" alt="" />
+          </a>
         </li>
       </ul>
     </section>
