--- a/Alien.html
+++ b/Alien.html
@@ -12,13 +12,21 @@
   </head>
   <body>
     <header>
-      <h1><i class="fa fa-chevron-left"></i> Andreas favourites movies</h1>
+      <h1><a class="backArrow" href="./index.html"><i class="fa fa-chevron-left"></i></a> Andreas favourites movies</h1>
     </header>
     <section class="movie-details">
       <h1>Alien</h1>
       <div id="player"></div>
-      <p><b>Year:</b> year</p>
-      <p><b> Description:</b> description</p>
+      <p><b>Released:</b> <span id="movieReleased"></span> <span id="yearCalc"></span></p>
+      <p><b>Director(s):</b> <span id="movieDirector"></span></p>
+      <p><b>Writer(s):</b> <span id="movieWriter"></span></p>
+      <p><b>Actor(s):</b> <span id="movieActor"></span></p>
+      <p><b>Genre:</b> <span id="movieGenre"></span></p>
+      <p><b>Description:</b> <span id="movieDescription"></span></p>
+      <p><strong>Ratings:</strong></p>
+      <ul id="ratingList">
+
+      </ul>
     </section>
   </body>
   <script src="js/javascript.js"></script>
