Fixed index page javaScript problem

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" media="screen" href="css/style.css" />
     <link rel="stylesheet" media="print" href="css/print.css" />
-    <title>Movies</title>
+    <title id="title">Movies</title>
   </head>
   <body>
     <header>
