Added new Movies;

--- a/index.html
+++ b/index.html
@@ -34,6 +34,28 @@
             <img class="movie-image" src="img/avatar.jpg" alt="" />
           </a>
         </li>
+
+        <li class="movie-element">
+          <a href="2001 Odyssey.html"> <h2 class="movie-title">2001: A Space Odyssey</h2> </a>
+          <a href="2001 Odyssey.html">
+            <img class="movie-image" src="img/space odyssey.jpg" alt="" />
+          </a>
+        </li>
+
+        <li class="movie-element">
+          <a href="Blade Runner.html"> <h2 class="movie-title">Blade Runner</h2> </a>
+          <a href="Blade Runner.html">
+            <img class="movie-image" src="img/blade runner.jpg" alt="" />
+          </a>
+        </li>
+
+        <li class="movie-element">
+          <a href="Terminator 2.html"> <h2 class="movie-title">Terminator: 2</h2> </a>
+          <a href="Terminator 2.html">
+            <img class="movie-image" src="img/terminator 2.jpg" alt="" />
+          </a>
+        </li>
+
       </ul>
     </section>
   </body>
