--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Andreas favourite movies" />
     <link rel="stylesheet" media="screen" href="css/style.css" />
     <link rel="stylesheet" media="print" href="css/print.css" />
     <title id="title">Movies</title>
@@ -17,45 +18,62 @@
         <li class="movie-element">
           <a href="Alien.html"> <h2 class="movie-title">Alien</h2> </a>
           <a href="Alien.html">
-            <img class="movie-image" src="img/alien.jpg" alt="" />
+            <img class="movie-image" src="img/alien.jpg" alt="Alien" />
           </a>
         </li>
 
         <li class="movie-element">
           <a href="Arrival.html"> <h2 class="movie-title">Arrival</h2> </a>
           <a href="Arrival.html">
-            <img class="movie-image" src="img/arrival.jpg" alt="" />
+            <img class="movie-image" src="img/arrival.jpg" alt="Arrival" />
           </a>
         </li>
 
         <li class="movie-element">
           <a href="Avatar.html"> <h2 class="movie-title">Avatar</h2> </a>
           <a href="Avatar.html">
-            <img class="movie-image" src="img/avatar.jpg" alt="" />
+            <img class="movie-image" src="img/avatar.jpg" alt="Avatar" />
           </a>
         </li>
 
         <li class="movie-element">
-          <a href="2001 Odyssey.html"> <h2 class="movie-title">2001: A Space Odyssey</h2> </a>
           <a href="2001 Odyssey.html">
-            <img class="movie-image" src="img/space odyssey.jpg" alt="" />
+            <h2 class="movie-title">2001: A Space Odyssey</h2>
+          </a>
+          <a href="2001 Odyssey.html">
+            <img
+              class="movie-image"
+              src="img/space odyssey.jpg"
+              alt="Space Odyssey"
+            />
           </a>
         </li>
 
         <li class="movie-element">
-          <a href="Blade Runner.html"> <h2 class="movie-title">Blade Runner</h2> </a>
           <a href="Blade Runner.html">
-            <img class="movie-image" src="img/blade runner.jpg" alt="" />
+            <h2 class="movie-title">Blade Runner</h2>
+          </a>
+          <a href="Blade Runner.html">
+            <img
+              class="movie-image"
+              src="img/blade runner.jpg"
+              alt="Blade Runner"
+            />
           </a>
         </li>
 
         <li class="movie-element">
-          <a href="Terminator 2.html"> <h2 class="movie-title">Terminator: 2</h2> </a>
           <a href="Terminator 2.html">
-            <img class="movie-image" src="img/terminator 2.jpg" alt="" />
+            <h2 class="movie-title">Terminator: 2</h2>
+          </a>
+          <a href="Terminator 2.html">
+            <img
+              class="movie-image"
+              src="img/terminator 2.jpg"
+              alt="Terminator 2"
+            />
           </a>
         </li>
-
       </ul>
     </section>
   </body>
