--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           <a href="Alien.html">
             <img class="movie-image" src="img/alien.jpg" alt="Alien" />
           </a>
+          <button class="movie-button">SEE MORE</button>
         </li>
 
         <li class="movie-element">
@@ -27,6 +28,7 @@
           <a href="Arrival.html">
             <img class="movie-image" src="img/arrival.jpg" alt="Arrival" />
           </a>
+          <button class="movie-button">SEE MORE</button>
         </li>
 
         <li class="movie-element">
@@ -34,6 +36,7 @@
           <a href="Avatar.html">
             <img class="movie-image" src="img/avatar.jpg" alt="Avatar" />
           </a>
+          <button class="movie-button">SEE MORE</button>
         </li>
 
         <li class="movie-element">
@@ -47,6 +50,7 @@
               alt="Space Odyssey"
             />
           </a>
+          <button class="movie-button">SEE MORE</button>
         </li>
 
         <li class="movie-element">
@@ -60,6 +64,7 @@
               alt="Blade Runner"
             />
           </a>
+          <button class="movie-button">SEE MORE</button>
         </li>
 
         <li class="movie-element">
@@ -73,6 +78,7 @@
               alt="Terminator 2"
             />
           </a>
+          <button class="movie-button">SEE MORE</button>
         </li>
       </ul>
     </section>
