--- a/2001 Odyssey.html
+++ b/2001 Odyssey.html
@@ -15,8 +15,9 @@
         <h1><a class="backArrow" href="./index.html"><i class="fa fa-chevron-left"></i></a> Andreas favourites movies
         </h1>
     </header>
+    <h1 id="movieTitle">2001: A Space Odyssey</h1>
     <section class="movie-details">
-        <h1>2001: A Space Odyssey</h1>
+        
         <div id="player"></div>
         <div class="movie-details-description">
 
