--- a/Avatar.html
+++ b/Avatar.html
@@ -13,11 +13,10 @@
   <header>
     <h1><a class="backArrow" href="./index.html"><i class="fa fa-chevron-left"></i></a> Andreas favourites movies</h1>
   </header>
+  <h1 id="movieTitle">Avatar</h1>
   <section class="movie-details">
-    <h1>Avatar</h1>
     <div id="player"></div>
     <div class="movie-details-description">
-
       <p><b>Released:</b> <span id="movieReleased"></span> <span id="yearCalc"></span></p>
       <p><b>Director(s):</b> <span id="movieDirector"></span></p>
       <p><b>Writer(s):</b> <span id="movieWriter"></span></p>
