--- a/Blade Runner.html
+++ b/Blade Runner.html
@@ -13,8 +13,9 @@
         <h1><a class="backArrow" href="./index.html"><i class="fa fa-chevron-left"></i></a> Andreas favourites movies
         </h1>
     </header>
+    <h1 id="movieTitle">Blade Runner</h1>
     <section class="movie-details">
-        <h1>Blade Runner</h1>
+        
         <div id="player"></div>
         <div class="movie-details-description">
 
