--- a/Terminator 2.html
+++ b/Terminator 2.html
@@ -14,8 +14,9 @@
         <h1><a class="backArrow" href="./index.html"><i class="fa fa-chevron-left"></i></a> Andreas favourites movies
         </h1>
     </header>
+    <h1 id="movieTitle">Terminator: 2</h1>
     <section class="movie-details">
-        <h1>Terminator: 2</h1>
+        
         <div id="player"></div>
         <div class="movie-details-description">
 
