--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-      <h1>Andreas favourites movies</h1>
+      <h1 style="text-align: center;">Andreas favourites movies</h1>
     </header>
 
     <section class="movies">
