--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
     <title id="title">Movies</title>
   </head>
   <body>
-    <header>
-      <h1>Andreas favourites movies</h1>
+    <header clas>
+      <h1>
+        <img class="andreas-head" src="img/Andrea.gif" alt="" />Andreas
+        favourites movies
+        <img class="andreas-head" src="img/Andrea.gif" alt="" />
+      </h1>
     </header>
 
     <section class="movies">
