--- a/Avatar.html
+++ b/Avatar.html
@@ -1,34 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <title id="title">Avatar</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="css/style.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <title id="title">Avatar</title>
-</head>
-
-<body>
-  <header>
-    <h1><a class="backArrow" href="./index.html"><i class="fa fa-chevron-left"></i></a> Andreas favourites movies</h1>
-  </header>
-  <h1 id="movieTitle">Avatar</h1>
-  <section class="movie-details">
-    <div id="player"></div>
-    <div class="movie-details-description">
-      <p><b>Released:</b> <span id="movieReleased"></span> <span id="yearCalc"></span></p>
-      <p><b>Director(s):</b> <span id="movieDirector"></span></p>
-      <p><b>Writer(s):</b> <span id="movieWriter"></span></p>
-      <p><b>Actor(s):</b> <span id="movieActor"></span></p>
-      <p><b>Genre:</b> <span id="movieGenre"></span></p>
-      <p><b>Description:</b> <span id="movieDescription"></span></p>
-      <p><strong>Ratings:</strong></p>
-      <div id="ratingList"></div>
-
-    </div>
-  </section>
-</body>
-<script src="js/javascript.js"></script>
-
+  <body>
+    <header>
+      <h1>
+        <a class="backArrow" href="./index.html"
+          ><i class="fa fa-chevron-left"></i
+        ></a>
+        Andreas favourites movies
+      </h1>
+    </header>
+    <h1 id="movieTitle">Avatar</h1>
+    <section class="movie-details">
+      <div id="player"></div>
+      <div class="movie-details-description">
+        <p>
+          <b>Released:</b> <span id="movieReleased"></span>
+          <span id="yearCalc"></span>
+        </p>
+        <p><b>Director(s):</b> <span id="movieDirector"></span></p>
+        <p><b>Writer(s):</b> <span id="movieWriter"></span></p>
+        <p><b>Actor(s):</b> <span id="movieActor"></span></p>
+        <p><b>Genre:</b> <span id="movieGenre"></span></p>
+        <p><b>Description:</b> <span id="movieDescription"></span></p>
+        <p><strong>Ratings:</strong></p>
+        <div id="ratingList"></div>
+      </div>
+    </section>
+  </body>
+  <script src="js/javascript.js"></script>
 </html>
