--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
     <title id="title">Movies</title>
   </head>
   <body>
-
     <header>
-      <h1 class="h1-class"> <img class="andreas-head" src="img/Andrea.gif" alt="" />Andreas favourites movies <img class="andreas-head" src="img/Andrea.gif" alt="" /></h1>
+      <h1 class="h1-class">
+        <img class="andreas-head" src="img/Andrea.gif" alt="" />Andreas
+        favourites movies
+        <img class="andreas-head" src="img/Andrea.gif" alt="" />
+      </h1>
     </header>
 
     <section class="movies">
@@ -21,7 +24,6 @@
           <a href="Alien.html">
             <img class="movie-image" src="img/alien.jpg" alt="Alien" />
           </a>
-          <button class="movie-button">SEE MORE</button>
         </li>
 
         <li class="movie-element">
@@ -29,7 +31,6 @@
           <a href="Arrival.html">
             <img class="movie-image" src="img/arrival.jpg" alt="Arrival" />
           </a>
-          <button class="movie-button">SEE MORE</button>
         </li>
 
         <li class="movie-element">
@@ -37,7 +38,6 @@
           <a href="Avatar.html">
             <img class="movie-image" src="img/avatar.jpg" alt="Avatar" />
           </a>
-          <button class="movie-button">SEE MORE</button>
         </li>
 
         <li class="movie-element">
@@ -51,7 +51,6 @@
               alt="Space Odyssey"
             />
           </a>
-          <button class="movie-button">SEE MORE</button>
         </li>
 
         <li class="movie-element">
@@ -65,7 +64,6 @@
               alt="Blade Runner"
             />
           </a>
-          <button class="movie-button">SEE MORE</button>
         </li>
 
         <li class="movie-element">
@@ -79,7 +77,6 @@
               alt="Terminator 2"
             />
           </a>
-          <button class="movie-button">SEE MORE</button>
         </li>
       </ul>
     </section>
