--- a/Avatar.html
+++ b/Avatar.html
@@ -13,30 +13,32 @@
 
   <body>
     <header>
-      <h1>
+      <h1 class="h1-class">
         <a class="backArrow" href="./index.html"
           ><i class="fa fa-chevron-left"></i
         ></a>
         Andreas favourites movies
       </h1>
     </header>
-    <h1 id="movieTitle">Avatar</h1>
-    <section class="movie-details">
-      <div id="player"></div>
-      <div class="movie-details-description">
-        <p>
-          <b>Released:</b> <span id="movieReleased"></span>
-          <span id="yearCalc"></span>
-        </p>
-        <p><b>Director(s):</b> <span id="movieDirector"></span></p>
-        <p><b>Writer(s):</b> <span id="movieWriter"></span></p>
-        <p><b>Actor(s):</b> <span id="movieActor"></span></p>
-        <p><b>Genre:</b> <span id="movieGenre"></span></p>
-        <p><b>Description:</b> <span id="movieDescription"></span></p>
-        <p><strong>Ratings:</strong></p>
-        <div id="ratingList"></div>
-      </div>
-    </section>
+    <div class="movie-container">
+      <h1 id="movieTitle">Avatar</h1>
+      <section class="movie-details">
+        <div id="player"></div>
+        <div class="movie-details-description">
+          <p>
+            <b>Released:</b> <span id="movieReleased"></span>
+            <span id="yearCalc"></span>
+          </p>
+          <p><b>Director(s):</b> <span id="movieDirector"></span></p>
+          <p><b>Writer(s):</b> <span id="movieWriter"></span></p>
+          <p><b>Actor(s):</b> <span id="movieActor"></span></p>
+          <p><b>Genre:</b> <span id="movieGenre"></span></p>
+          <p><b>Description:</b> <span id="movieDescription"></span></p>
+          <p><strong>Ratings:</strong></p>
+          <div id="ratingList"></div>
+        </div>
+      </section>
+    </div>
   </body>
   <script src="js/javascript.js"></script>
 </html>
