--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Andreas favourite movies" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="img/favicon-16x16.png"
+    />
     <link rel="stylesheet" media="screen" href="css/style.css" />
     <link rel="stylesheet" media="print" href="css/print.css" />
     <title id="title">Movies</title>
